BOOK-490 - Refactored curruency. - Removed spaghetti. - Fixed all precisions for BTC(5) and mBTC(2). - Fixed precision of Odds in My Bets to be always two decimal places. - Right aligned My Bets, and Transaction History.

--- a/src/components/MyWager/MyWager.less
+++ b/src/components/MyWager/MyWager.less
@@ -45,17 +45,17 @@
       tbody {
         tr {
           td {
-            &:nth-of-type(8) {
+            &:nth-of-type(5) {
               text-align: center;
             }
-            tbody{
-              tr{
-                td{
-                  &:nth-of-type(5){
-                    text-align: right;
-                  }
-                }
-              }
+            &:nth-of-type(6){
+              text-align: right;
+            }
+            &:nth-of-type(7){
+              text-align: right;
+            }
+            &:nth-of-type(8){
+              text-align: right;
             }
           }
         }
